force-app/main/default/objects/Tech_Endoso__c/Tech_Endoso__c.object-meta.xml
<CustomObject>
    <label>Endoso</label>
    <nameField>
        <displayFormat>Endoso-{0000}</displayFormat>
        <label>No Endoso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endosos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>