force-app/main/default/objects/Tech_Endoso__c/fields/Afecta_prima__c.field-meta.xml
<CustomField>
    <fullName>Afecta_prima__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afecta prima</label>
    <type>Checkbox</type>
</CustomField>