force-app/main/default/objects/Tech_Endoso__c/fields/Convenio__c.field-meta.xml
<CustomField>
    <fullName>Convenio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convenio Modificatorio</label>
    <referenceTo>Tech_Convenio_Modificatorio__c</referenceTo>
    <relationshipLabel>Endosos de Fianza</relationshipLabel>
    <relationshipName>Endosos_Fianza</relationshipName>
    <type>Lookup</type>
</CustomField>