force-app/main/default/objects/Tech_Endoso__c/fields/Diferencia_monto__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_monto__c</fullName>
    <label>Diferencia monto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>