force-app/main/default/objects/Tech_Endoso__c/fields/Nueva_modalidad__c.field-meta.xml
<CustomField>
    <fullName>Nueva_modalidad__c</fullName>
    <label>Nueva modalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periodo_Pago</valueSetName>
    </valueSet>
</CustomField>