force-app/main/default/objects/Tech_Endoso__c/fields/Plan_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_pago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan de pago original</label>
    <referenceTo>Tech_Plan_de_Pago__c</referenceTo>
    <relationshipLabel>Endosos</relationshipLabel>
    <relationshipName>Endosos</relationshipName>
    <type>Lookup</type>
</CustomField>