force-app/main/default/objects/Tech_Endoso__c/fields/Tipo_endoso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_endoso__c</fullName>
    <label>Tipo de endoso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aumento monto</fullName>
            </value>
            <value>
                <fullName>Extensión vigencia</fullName>
            </value>
            <value>
                <fullName>Reducción monto</fullName>
            </value>
            <value>
                <fullName>Cambio de prima</fullName>
            </value>
            <value>
                <fullName>Cambio datos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>